--- a/apr/Makefile
+++ b/apr/Makefile
@@ -1,30 +1,31 @@
 
+PROJECT_ROOT := jenkins:/var/jenkins_home/workspace/app-apr-food-delivery/
 
 push: set_ip token env trav_cp trav_send trav_nexus trav_maven trav_group wechat_build_finish remove_ip
 
 wechat_build_finish: 
-	docker cp ./jenkins/wechat_build_finish.sh jenkins:/var/jenkins_home/workspace/app-apr-food-delivery/
+	docker cp ./jenkins/wechat_build_finish.sh $(PROJECT_ROOT)
 
 token:
-	docker cp ./jenkins/token jenkins:/var/jenkins_home/workspace/app-apr-food-delivery/
+	docker cp ./jenkins/token $(PROJECT_ROOT)
 
 env:
-	docker cp ./jenkins/env.sh jenkins:/var/jenkins_home/workspace/app-apr-food-delivery/
+	docker cp ./jenkins/env.sh $(PROJECT_ROOT)
 
 trav_cp:
-	docker cp ./jenkins/trav_cp.sh jenkins:/var/jenkins_home/workspace/app-apr-food-delivery/
+	docker cp ./jenkins/trav_cp.sh $(PROJECT_ROOT)
 
 trav_send:
-	docker cp ./jenkins/trav_send.sh jenkins:/var/jenkins_home/workspace/app-apr-food-delivery/
+	docker cp ./jenkins/trav_send.sh $(PROJECT_ROOT)
 
 trav_nexus:
-	docker cp ./jenkins/trav_nexus.sh jenkins:/var/jenkins_home/workspace/app-apr-food-delivery/
+	docker cp ./jenkins/trav_nexus.sh $(PROJECT_ROOT)
 
 trav_maven:
-	docker cp ./jenkins/trav_maven.sh jenkins:/var/jenkins_home/workspace/app-apr-food-delivery/
+	docker cp ./jenkins/trav_maven.sh $(PROJECT_ROOT)
 
 trav_group:
-	docker cp ./jenkins/trav_group.sh jenkins:/var/jenkins_home/workspace/app-apr-food-delivery/
+	docker cp ./jenkins/trav_group.sh $(PROJECT_ROOT)
 
 set_ip:
 	./ip/set_ip.sh jenkins
