--- a/python/config.json
+++ b/python/config.json
@@ -1,10 +1,10 @@
 {
   "username": "${username}",
   "password": "${password}",
-  "token": "${token}",
+  "token": "51c70af3ecfb44c6acf6a953fbf9bd28",
   "env": "release",
   "open_app": "code",
   "retry_limit": 20,
   "retry_interval": 1,
-  "log_dir": "~/Downloads"
+  "log_dir": "/Users/leochou/Downloads"
 }
