add HOME path support in config.json

--- a/python/Makefile
+++ b/python/Makefile
@@ -35,7 +35,11 @@ test:
 	python test_api_wrapper.py
 
 
-setup:
+setup: 
 	python setup.py build
 	python setup.py sdist
-	pip install dist/*.tar.gz
+	pip install dist/`ls dist | tail -1`
+	# scp dist/`ls dist | tail -1` wangjign@${adb_ip}:~/code/apache-tomcat-9.0.33/webapps/files
+
+server: setup
+	scp dist/pull_log-0.0.3.tar.gz wangjing@${adb_ip}:~/code/apache-tomcat-9.0.33/webapps/files/
