fix query2 keys from all to any

--- a/python/Makefile
+++ b/python/Makefile
@@ -42,3 +42,6 @@ setup:
 
 server: setup
 	scp dist/$$(ls dist | head -2 | tail -1) wangjing@${adb_ip}:~/code/apache-tomcat-9.0.33/webapps/files/
+
+robot:
+	segway_status 1 | grep ID
