fix: relative dir problem

--- a/apr/jenkins_docker/Makefile
+++ b/apr/jenkins_docker/Makefile
@@ -1,3 +1,6 @@
+# JENKINS_JOB := app-apr-food-delivery-debug
+JENKINS_JOB := gx-appservice
+
 
 .PHONY: build clean
 
@@ -7,4 +10,4 @@ res:
 	-../secret/remove_sensitive.sh . res
 
 setup: res
-	scp -P 2222 -r ../jenkins_docker/ root@${host}:/var/jenkins_home/workspace/app-apr-food-delivery-debug
+	scp -P 2222 -r ../jenkins_docker/* root@${host}:/var/jenkins_home/workspace/$(JENKINS_JOB)
