add before build script

--- a/apr/jenkins_docker/Makefile
+++ b/apr/jenkins_docker/Makefile
@@ -1,5 +1,6 @@
-# JENKINS_JOB := app-apr-food-delivery-debug
-JENKINS_JOB := gx-appservice
+JENKINS_JOB := app-apr-food-delivery-debug
+# JENKINS_JOB := gx-appservice
+# JENKINS_JOB := Gx_Service
 
 
 .PHONY: build clean
@@ -10,4 +11,4 @@ res:
 	-../secret/remove_sensitive.sh . res
 
 setup: res
-	scp -P 2222 -r ../jenkins_docker/* root@${host}:/var/jenkins_home/workspace/$(JENKINS_JOB)
+	scp -P 2222 -r ../jenkins_docker/* root@10.10.80.25:/var/jenkins_home/workspace/$(JENKINS_JOB)
