优化jenkins构建脚本

--- a/apr/jenkins_docker/Makefile
+++ b/apr/jenkins_docker/Makefile
@@ -1,7 +1,8 @@
-JENKINS_JOB := app-apr-food-delivery-debug
+# JENKINS_JOB := app-apr-food-delivery-debug
 # JENKINS_JOB := app-apr-food-delivery-r1-1
 # JENKINS_JOB := gx-appservice
 # JENKINS_JOB := Gx_Service
+# JENKINS_JOB := nav_app-debug
 
 
 .PHONY: build clean
