filing jenkins script

--- a/apr/jenkins_docker/Makefile
+++ b/apr/jenkins_docker/Makefile
@@ -3,6 +3,8 @@
 # JENKINS_JOB := gx-appservice
 # JENKINS_JOB := Gx_Service
 # JENKINS_JOB := nav_app-debug
+# JENKINS_JOB := r1_app-debug
+# JENKINS_JOB := ai_service_app-debug
 
 
 .PHONY: build clean
@@ -13,4 +15,4 @@ res:
 	-../secret/remove_sensitive.sh . res
 
 setup: res
-	scp -P 2222 -r ../jenkins_docker/* root@10.10.80.25:/var/jenkins_home/workspace/$(JENKINS_JOB)
+	scp -P 2222 -r ../jenkins_docker/* root@${host}:/var/jenkins_home/workspace/$(JENKINS_JOB)
