优化提取git commit记录命令

--- a/apr/jenkins_docker/Makefile
+++ b/apr/jenkins_docker/Makefile
@@ -1,9 +1,11 @@
 # JENKINS_JOB := app-apr-food-delivery-debug
-# JENKINS_JOB := app-apr-food-delivery-r1-1
+JENKINS_JOB := app-restaurant-debug
 # JENKINS_JOB := gx-appservice
 # JENKINS_JOB := Gx_Service
 # JENKINS_JOB := nav_app-debug
 # JENKINS_JOB := r1_app-debug
+# JENKINS_JOB := d2_app-debug
+# JENKINS_JOB := module-graph
 # JENKINS_JOB := ai_service_app-debug
 
 
