add gitlab-sha fix host

--- a/apr/gitlab-sha1/Makefile
+++ b/apr/gitlab-sha1/Makefile
@@ -11,3 +11,10 @@ res:
 setup: res
 	scp -P 2222 -r ./rl.js root@${host}:/var/jenkins_home/workspace/$(JENKINS_JOB)
 	scp -P 2222 -r ./dev.js root@${host}:/var/jenkins_home/workspace/$(JENKINS_JOB)
+
+init:
+	npm install
+
+browser:
+	node rl.js | xargs -n2 -II echo "I </br>"| browser
+	node dev.js | xargs -n2 -II echo "I </br>"| browser
