add aes python impl

--- a/apr/mqtt/cmd/Makefile
+++ b/apr/mqtt/cmd/Makefile
@@ -12,7 +12,16 @@ res:
 	-../../secret/remove_sensitive.sh . res
 
 javac:
-	javac -d bin *.java
+	javac -d bin src/*.java
+
+jar:
+	cd bin && jar -cvfm aes.jar ./MANIFEST.MF *
+
+runj:
+	java -cp ./bin src.Aes 'hello world' 'mysecretkey' encrypt
+	java -cp ./bin src.Aes 'cGFyYW1zdHIu7Wf85ouqQfJae1HEh8Lv36xwAiLJEPsRKBDP6fPEONMFacAVG+d0' 'mysecretkey' decrypt
+	java -jar ./bin/aes.jar 'hello world' 'mysecretkey' encrypt
+	java -jar ./bin/aes.jar 'cGFyYW1zdHI+vogaGldj0+n3pV7BxgKNKTyv15cLPdI=' 'mysecretkey' decrypt
 
 mqtt:
 	python cmd_sender.py
